# zman

./: .build.yml  .cliff.toml  .dprint.jsonc  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  justfile
.builds/: ci.yml
.cargo-husky/hooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
configs/: cliff.toml  dprint.json
doc/: wiki.md
docs/: demo.sh  wiki.md
docs/dev/: contributing.md  releasing.md
examples/: i3rs.toml  i3status-rust.toml
media/: zman.sh
scripts/: compress-assets.sh  prepare-assets.sh  release.sh
src/: app.rs  cli.rs  config.rs  error.rs  jaro.py  lib.rs  main.rs  output.rs  progress.rs  util.rs
src/progress/: mod.rs  month.rs  week.rs  year.rs
tests/: integration.rs
