[package]
name = "zman"
version = "1.0.6"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "command-line-utilities"]
edition = "2021"
keywords = ["time", "year", "progress-bar"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/zman"
description = "a CLI year progress "

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
colored = "2.0.0"
thiserror = "1.0.38"

[dependencies.clap]
version = "4.0.29"
features = ["suggestions", "color", "cargo", "derive"]

[dependencies.time]
version = "0.3"
features = ["macros", "formatting", "local-offset"]

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
