[package]
name = "zman"
version = "2.0.2"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "command-line-utilities"]
edition = "2021"
keywords = ["time", "year", "progress-bar"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/zman"
description = "a CLI year progress "

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
owo-colors = "3"
thiserror = "1.0"

[dependencies.clap]
version = "4.0"
features = ["suggestions", "color", "cargo", "derive"]

[dependencies.time]
version = "0.3.17"
features = ["macros", "formatting", "local-offset"]

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }

assert_cmd = "2.0"
predicates = "2.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
