[package]
name = "zman"
version = "3.0.0"
authors = ["azzamsa <noreply@azzamsa.com>"]
categories = ["date-and-time", "command-line-utilities"]
edition = "2021"
keywords = ["time", "year", "progress-bar"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/zman"
rust-version = "1.80.0"
description = "a CLI year progress "

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
chrono = "0.4.38"
owo-colors = "4"

# cli
clap = { version = "4.5.13", features = ["suggestions", "color", "cargo", "derive"] }

# error
anyhow = "1.0"
jiff = "0.1.4"
thiserror = "1.0.63"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
